tree-sitter-lexc/test/corpus/basic.txt
===========
empty entry
===========

LEXICON Root

X ;

LEXICON X

a:b # ;

---

(source_file
  (lexicon
    (lexicon_start) (lexicon_name)
    (empty_lexicon_line (lexicon_name) (semicolon)))
  (lexicon
    (lexicon_start) (lexicon_name)
    (lexicon_line
      (lexicon_pair (lexicon_string) (colon) (lexicon_string))
      (lexicon_name) (semicolon))))
